test/corpus/attributes.txt
==================
chained modifiers
==================
data-on:click__window__debounce.500ms.leading
---

(program
  (datastar_attribute
    (plugin_name)
    (plugin_key)
    (modifier
      (modifier_name))
    (modifier
      (modifier_name)
      (modifier_tag)
      (modifier_tag))))

==================
dotted signal key
==================
data-signals:foo_bar.baz__case.snake
---

(program
  (datastar_attribute
    (plugin_name)
    (plugin_key)
    (modifier
      (modifier_name)
      (modifier_tag))))

==================
pro match media
==================
data-match-media:is-dark__case.kebab
---

(program
  (datastar_attribute
    (plugin_name)
    (plugin_key)
    (modifier
      (modifier_name)
      (modifier_tag))))

==================
rocket structural attrs
==================
data-if
data-else-if
data-else
data-for
---

(program
  (datastar_attribute
    (plugin_name))
  (datastar_attribute
    (plugin_name))
  (datastar_attribute
    (plugin_name))
  (datastar_attribute
    (plugin_name)))
