test/corpus/version.txt
==================
aliased attribute
==================
data-star-on:click__prevent
---

(program
  (datastar_attribute
    (plugin_name)
    (plugin_key)
    (modifier
      (modifier_name))))

==================
csp nonce attribute
==================
data-nonce
data-star-nonce
---

(program
  (datastar_attribute
    (plugin_name))
  (datastar_attribute
    (plugin_name)))

==================
custom element binding
==================
data-bind:is-checked__prop.checked__event.input.change
---

(program
  (datastar_attribute
    (plugin_name)
    (plugin_key)
    (modifier
      (modifier_name)
      (modifier_tag))
    (modifier
      (modifier_name)
      (modifier_tag)
      (modifier_tag))))

==================
rocket root modifier
==================
data-bind:_name__root
---

(program
  (datastar_attribute
    (plugin_name)
    (plugin_key)
    (modifier
      (modifier_name))))

==================
single underscores in keys
==================
data-signals:_foo_bar.__ifmissing
---

(program
  (datastar_attribute
    (plugin_name)
    (plugin_key)
    (modifier
      (modifier_name))))
